--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - '2.7'
 install:
-  - 'pip install .'
+  - 'pip install .[dev]'
 script:
   - 'py.test --tb short'
 branches:
